--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,25 +1,24 @@
-<footer class="page-footer">
+<footer class="page-footer grey darken-4">
   <div class="container">
    <div class="row">
      <div class="col l6 s12">
-       <h5 class="white-text">Footer Content</h5>
-       <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+       <h5 class="white-text">Proyecto Final de CyPS</h5>
+       <p class="grey-text text-lighten-4">Ariel Garcia Lucien.</p>
      </div>
      <div class="col l4 offset-l2 s12">
-       <h5 class="white-text">Links</h5>
+       <h5 class="white-text">Autores</h5>
        <ul>
-         <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-         <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-         <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-         <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+         <li><a class="grey-text text-lighten-3" href="#!">Joan Andoni</a></li>
+         <li><a class="grey-text text-lighten-3" href="#!">Daniel Charua</a></li>
+         <li><a class="grey-text text-lighten-3" href="#!">Isaac Halabe</a></li>
+         <li><a class="grey-text text-lighten-3" href="#!">Mauricio Rico</a></li>
        </ul>
      </div>
    </div>
   </div>
   <div class="footer-copyright">
    <div class="container">
-   © 2014 Copyright Text
-   <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+   © 2018 Copyright Text
    </div>
   </div>
 </footer>
