--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down links-group">
         <li><a [routerLink]="['/upload']">Upload</a></li>
         <span class= "vertical-line"></span>
-        <li><a class="waves-effect waves-light btn cart-btn" [routerLink]="['/login']">Login</a></li>
+        <li><a class="waves-effect waves-light btn cart-btn" [routerLink]="['/login']">LogOut</a></li>
       </ul>
     </div>
   </nav>
