--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -13,7 +13,7 @@
     <button type="button" style="margin:10px 20px 0 0;" class="waves-effect waves-light btn-large grey darken-4" (click)="Upload()">Upload</button>
   </form>
 
-  <div>
+  <div id="results">
     <table class="table">
       <thead>
         <tr>
